	PR target/33774 	* config/i386/cygming.h (BIGGEST_FIELD_ALIGNMENT): Define only if 	IN_TARGET_LIBS.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130024 138bc75d-0d04-0410-961f-82ee72b054a4